# supportsight-live-agent

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  docker-compose.local.yml
.github/workflows/: cd.yml  ci.yml
actions-service/: .dockerignore  Dockerfile  pom.xml
backend-orchestrator/: .dockerignore  .env.example  Dockerfile  requirements.txt
backend-orchestrator/app/: config.py  main.py
backend-orchestrator/app/agents/: action_agent.py  incident_analyst.py  runbook_agent.py  vision_agent.py
backend-orchestrator/app/domain/: models.py  schemas.py
backend-orchestrator/scripts/: ingest_runbooks.py
backend-orchestrator/tests/: conftest.py  test_agent_flow.py  test_health.py  test_rag_flow.py  test_session_service.py
docs/: flutter-ios-demo.md
docs/architecture/: ARCHITECTURE.md
docs/demo-fixtures/: scenario-1-service-down.json  scenario-2-memory-leak.json  scenario-3-deployment-fail.json
docs/runbooks/: database-issues.md  service-down.md
flutter_app/: .metadata  README.md  pubspec.yaml
flutter_app/lib/: config.dart  main.dart
flutter_app/test/: api_service_test.dart  widget_test.dart
frontend/: .dockerignore  Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.js
frontend/__tests__/: integration.test.tsx  page.test.tsx
infra/cloudrun/: deploy.sh
infra/terraform/: main.tf
logs-service/: .dockerignore  Cargo.toml  Dockerfile  requirements.txt
logs-service/src/: lib.rs  main.rs
logs-service/src/bridge/: server.py
logs-service/src/parser/: mod.rs
logs-service/tests/: test_parser.py
(+45 files in other folders)
