[package]
name = "supportsight-log-parser"
version = "0.1.0"
edition = "2021"
description = "High-performance log parser for SupportSight Live"

[lib]
name = "log_parser"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "log_parser_cli"
path = "src/main.rs"

[dependencies]
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
rayon = "1.10"
pyo3 = { version = "0.22", features = ["extension-module"], optional = true }

[features]
python = ["pyo3"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
